fix styling on mobile surfaces. add margins left and right.

--- a/portfolio/static/common.css
+++ b/portfolio/static/common.css
@@ -68,4 +68,13 @@ h1, h3 {
     .nav_items_p a {
         margin: 10px 5px;
     }
+
+    .image-grid {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .image-grid img {
+        width: calc(100% - 30px);
+    }
 }
